* Modify Prototype.Browser.MobileSafari to return true for iPod Touch. [#439 state:resolved] [jddalton, Olek Poplavsky]

* Make Form.serializeElements() and Form.Element.Methods.serialize() skip type="select-multiple" select elements that have no selected value. [#440 state:resolved] [jddalton, Shanrong Zhao]

* Moved browser feature/bug tests to private methods "Feature" and "Bug". [jddalton, kangax, Nick Stakenburg]

* Make use of native Array methods "every", "filter", "map" and "some" if available. [#317 state:resolved] [jddalton, fearphage]

* Drop support for Prototype created Array#reduce because it conflicts with the JavaScript 1.8 definition. [jddalton]
  Note: Backwards compatibility warning.

* unit test: Add check for WebKit marginRight bug #13343 to Element#getStyle tests. [jddalton]

* Consolidate WebKit fork of Element#cumulativeOffset and make cumulativeOffset handle "fixed" positioned elements. [jddalton]

* Reduce code duplication in Element#viewportOffset by using Element#cumulativeOffset. [jddalton]

* Make Object.isString() and Object.isNumber() work with values created by the Number/String constructor. [#375 state:resolved] [Andrew Dupont, atrepp, jddalton, kangax]

* Simplify the Template.Pattern RegExp. [jddalton]

* Fix Template#evaluate stripping the "before" match when passing an object.toTemplateReplacements() that returns a null/undefined value. [#237 state:resolved] [jddalton, Nir]

* Remove "finally" block from PeriodicalExecuter.onTimerEvent() because it's not needed and fails in IE without a "catch" block. [#421 state:resolved] [jddalton, Ville Koshinen]

* Optimize String#(extractScripts|stripScripts) by minimizing use and caching regular expressions. [#431 state:resolved] [jddalton, MIYAMUKO Katsuyuki]

* Optimize Selector class by removing unused variables, speeding up loops, and taking advantage of the element.children collection. [jddalton]
