@@ -1,3 +1,5 @@
+* Rewrite the Element._attributeTranslations object to reduce its code size. [jddalton]
+
 * Modify Prototype.Browser.MobileSafari to return true for iPod Touch. [#439 state:resolved] [jddalton, Olek Poplavsky]
 
 * Make Form.serializeElements() and Form.Element.Methods.serialize() skip type="select-multiple" select elements that have no selected value. [#440 state:resolved] [jddalton, Shanrong Zhao]
